This is now a python package
Signed-off-by: Christian Jung <christian.jung@udo.edu>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 Christian Jung <christian.jung@udo.edu>
+	* 22/01.13
+	* This is now a proper python package
+
+
+Christian Jung <christian.jung@udo.edu>
 	* 21.01.203
 	* Version 1 ;)
 
